navbar spacing fix

--- a/new design for staging/marvelad.css
+++ b/new design for staging/marvelad.css
@@ -337,8 +337,8 @@ body {
 }
 
 .global-nav-space{
-    padding-left: 2.5%;
-    padding-right: 2.5%;
+    padding-left: 3.5%;
+    padding-right: 3.5%;
 }
 
 .main-wrapper {
